--- a/app/globals.css
+++ b/app/globals.css
@@ -15,14 +15,29 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+.full-screen-div {
+    width: 100vw;
+    height: 100%;
+    min-height: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+@layer base{
+  body {
+      @apply dark:bg-gray-800 bg-white
+  }
+}
 
 body {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  margin: 0;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
