--- a/app/loading.css
+++ b/app/loading.css
@@ -1,3 +1,5 @@
+@tailwind components;
+
 .lds-dual-ring {
     display: inline-block;
     margin: 0;
@@ -16,9 +18,12 @@
     margin: 8px;
     border-radius: 50%;
     border: 6px solid #fff;
-    border-color: #000 transparent #000 transparent;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    @apply border-t-secondary border-b-secondary dark:border-t-secondary-dark dark:border-b-secondary-dark;
     animation: lds-dual-ring 1.2s linear infinite;
 }
+
   @keyframes lds-dual-ring {
     0% {
       transform: rotate(0deg);
